--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "description": "Just workshop",
   "main": "server.js",
   "dependencies": {
-    "bcrypt": "^5.0.0",
+    "bcrypt": "^5.1.0",
+    "connect-session-sequelize": "^7.1.6",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mysql2": "^2.2.1",
+    "seed": "^0.4.4",
     "sequelize": "^6.3.5"
   },
-  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "seed": "node seed/seed.js"
   },
   "keywords": [
     "workshop"
